# fflas-ffpack

./: .gitignore  .travis.yml  AUTHORS  CONTRIBUTORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  README  README.md  TODO  autogen.sh  autogen.status-blis  configure.ac  configure.scan  fflas-ffpack-config.in  fflas-ffpack.pc.in  fflasffpack-config.in  incremente-versions  index.html  params.json
autotune/: Makefile.am  arithprog.C  charpoly.C  fsyrk.C  fsytrf-threshold.h  fsytrf.C  ftrtri.C  pluq.C  tune_charpoly.sh  tune_fgemm.sh  tune_fsyrk.sh  tune_fsytrf.sh  tune_ftrtri.sh  tune_pluq.sh  winograd.C
benchmarks/: Makefile.am  Makefile.tests  RRR measures on qs order  benchmark-SSSvsRRR  benchmark-SSSvsRRR.C  benchmark-charpoly-mp  benchmark-charpoly-mp.C  benchmark-charpoly.C  benchmark-checkers.C  benchmark-dgemm.C  benchmark-dgetrf.C  benchmark-dgetri.C  benchmark-dotp.C  benchmark-dsytrf.C  benchmark-dtrsm.C  benchmark-dtrtri.C  benchmark-echelon.C  benchmark-fadd-lvl2  benchmark-fadd-lvl2-master  benchmark-fadd-lvl2.C  benchmark-fdot  benchmark-fdot-master  benchmark-fdot.C  benchmark-fgemm-master  benchmark-fgemm-mp.C  benchmark-fgemm-rns.C  benchmark-fgemm.C  benchmark-fgemv  benchmark-fgemv-mp.C  benchmark-fgemv-rns.C  benchmark-fgemv.C  benchmark-fgesv  benchmark-fgesv.C  benchmark-fspmm.C  benchmark-fspmv.C  benchmark-fsyr2k  benchmark-fsyr2k.C  benchmark-fsyrk.C  benchmark-fsytrf.C  benchmark-ftrsm-master  (+33 more)
benchmarks/html/: html_report.sh
benchmarks/test-src/: mesure.sh  parameter.in
doc/: Doxyfile  DoxyfileDev  Makefile.am  doxy.debug  doxydev.debug  fflas-ffpack.html  mainpage.doxy
doc/fflas-ffpack-dev-html/: 101-fgemm_8_c.html  2x2-fgemm_8_c.html  2x2-ftrsv_8_c.html  2x2-pluq_8_c.html  _matio_8h.html  align-allocator_8h.html  annotated.html  arch.html  args-parser_8h.html  arithprog_8_c.html  autotune_2charpoly_8_c.html  autotune_2pluq_8_c.html  benchmark-charpoly-mp_8_c.html  benchmark-charpoly_8_c.html  benchmark-checkers_8_c.html  benchmark-dgemm_8_c.html  benchmark-dgetrf_8_c.html  benchmark-dgetri_8_c.html  benchmark-dsytrf_8_c.html  benchmark-dtrsm_8_c.html  benchmark-dtrtri_8_c.html  benchmark-echelon_8_c.html  benchmark-fadd-lvl2_8_c.html  benchmark-fdot_8_c.html  benchmark-fgemm-mp_8_c.html  benchmark-fgemm-rns_8_c.html  benchmark-fgemm_8_c.html  benchmark-fgemv-mp_8_c.html  benchmark-fgemv_8_c.html  benchmark-fgesv_8_c.html  benchmark-fspmm_8_c.html  benchmark-fspmv_8_c.html  benchmark-fsyr2k_8_c.html  benchmark-fsyrk_8_c.html  benchmark-fsytrf_8_c.html  benchmark-ftrsm-mp_8_c.html  benchmark-ftrsm_8_c.html  benchmark-ftrsv_8_c.html  benchmark-ftrtri_8_c.html  benchmark-inverse_8_c.html  (+950 more)
doc/fflas-ffpack-html/: AUTHORS  _formulas.tex  annotated.html  arch.html  bib.html  bug.html  class_f_f_l_a_s_1_1_protected_1_1ftrsm_left_upper_no_trans_non_unit.html  class_f_f_p_a_c_k_1_1_failure.html  class_f_f_p_a_c_k_1_1_node.html  class_f_f_p_a_c_k_1_1_r_r_rrep.html  classes.html  copy.html  debug_8h.html  dir_071073d478a0aa019bae5bfee33605c1.html  dir_0d353d24d0afa59909efab6593124f6d.html  dir_13a41d9ad64fb9ae396cb953294783cf.html  dir_13dda03860614ad6943967d729910c50.html  dir_25ac10ebd321b4fc96a535398e455da1.html  dir_2c242754bc33760f0982748ea6de9ed5.html  dir_3d9ecf8e12495cef6969d811b1c6db14.html  dir_3e58c45d34832d14f1b778bede3cccd1.html  dir_3f4dc184899094e062ff9eb0d20a1f3e.html  dir_4b710b773fabc743f4c1329c4223bbdb.html  dir_54240258b3903a8e43f95422a3d9a8ff.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_5db92cc661fe514ceee8c2f38452293d.html  dir_5decb08227c519d09dc32f32dab772f6.html  dir_6c8ccaec3d8b3f5c96debc3799b33f89.html  dir_76faded4e39536a14d79158d1f0fb289.html  dir_7d7c2d24474abee57c83f3be9743cccc.html  dir_832e014794b376b1901dd535076cf4f4.html  dir_86be3aa158f17d26f4d3fd4ae825d535.html  dir_92c8c5edc1173e2891e357c59b9c107d.html  dir_a4f4d291e8ca6a2a5a568d8a9af3a0fa.html  dir_b377976cb080f96a33ef2ceb0d629fff.html  dir_baa9b3441ad9816cbf70b99fdc27293e.html  dir_c8843521cc2b354892efaf471a0b361e.html  (+72 more)
examples/: 101-fgemm.C  2x2-fgemm.C  2x2-pluq.C  Makefile.am  charpoly.C  det.C  matmul.C  pluq.C  rank.C  solve.C
fflas-ffpack/: Makefile.am  config-blas.h  fflas-ffpack-config.h  fflas-ffpack-configuration.h  fflas-ffpack-default-thresholds.h  fflas-ffpack.doxy  fflas-ffpack.h  fflasffpack-config.h
macros/: Makefile.am  aclocal-include.m4  avx-check.m4  ax_check_x86_features.m4  ax_cxx_compile_stdcxx_11.m4  blas-check.m4  blas-nolapack-check.m4  blasATLAS-check.m4  blasGOTO-check.m4  blasGSL-check.m4  blasOTHER-check.m4  clapack-check.m4  common.m4  config-header.m4  cuda-check.m4  debug.m4  fflaflas-doc.m4  fflaflas-misc.m4  fflaflas-opt.m4  fflas-ffpack-blas.m4  fflas-ffpack-doc.m4  fflas-ffpack-misc.m4  fflas-ffpack-opt.m4  fflas-ffpack-precompile.m4  fflasffpack-misc.m4  fflasffpack-opt.m4  givaro-check.m4  gmp-check.m4  instr_set.m4  lapack-check.m4  mkl-check.m4  omp-check.m4  simd-check.m4  sse2-check.m4
tests/: #test-fgemm#  Makefile  Makefile.am  Makefile.template  Matio.h  benchfgemm.C  benchlqup.C  configure.scan  dense_generator.C  jenkins-maker.sh  perfpublisher.sh  regression-check.C  test-bini-p.C  test-charpoly-check.C  test-charpoly.C  test-colechelon.C  test-compressQ.C  test-det-check.C  test-det.C  test-echelon.C  test-echelon_old.C  test-fadd.C  test-fdot.C  test-ffarith.C  test-fgemm-check.C  test-fgemm-long.C  test-fgemm-mp.C  test-fgemm.C  test-fgemv-rns.C  test-fgemv.C  test-fger.C  test-fgesv.C  test-finit.C  test-frobenius.C  test-fscal.C  test-fspmm-dlp  test-fspmm-dlp.C  test-fspmm-recint  test-fspmm-recint.C  test-fspmv.C  (+68 more)
tests/data/: mat11.sms  (+1 more)
trunk/: AUTHORS  ChangeLog  Makefile.am  TODO  _clang-format  autogen.sh  configure.ac  fflas-ffpack-config.in  incremente-versions
tutorial/: 2x2-fgemm.C  2x2-ftrsv.C  Makefile.am  fflas-101_1.C  fflas-101_2  fflas-101_3.C  fflas_101.C  fflas_101_lvl1.C  linear_algebra_101.C
tutorials/: 101-fgemm.C  2x2-fgemm.C  2x2-ftrsv.C  2x2-pluq.C  Makefile.am  fflas-101_1.C  fflas-101_3.C  fflas_101.C  fflas_101_lvl1.C  ffpack-fgesv.C  ffpack-solve.C  mpi-ring.C
(+1084 files in other folders)
